Update PinyinUtils.java